# pic-base-loader

./: .gitignore  pyproject.toml
db/: daily_base.sql  true_base.sql
src/base_loader/: __main__.py  date_helpers.py
src/base_loader/model/: __init__.py  astec.py  base.py  entity.py  market_cap.py  returns.py  shares_out.py  volume.py
src/base_loader/persistence/: source.py  target.py
src/base_loader/queries/: __init__.py  astec.py  cleanup.py  market_cap.py  returns.py  shares_out.py  volume.py
